[package]
name          = "qsv"
version       = "19.1.0"                                                                    #:version
authors       = ["Joel Natividad <joel@datHere.com>"]
description   = "A Blazing-Fast Data-wrangling toolkit."
documentation = "https://github.com/dathere/qsv#qsv-ultra-fast-csv-data-wrangling-toolkit"
homepage      = "https://qsv.dathere.com"
repository    = "https://github.com/dathere/qsv"
readme        = "README.md"
keywords      = ["csv", "geocode", "data-engineering", "etl", "opendata"]
categories    = ["command-line-utilities", "parser-implementations"]
license       = "MIT OR Unlicense"
autotests     = false
edition       = "2024"
rust-version  = "1.95"
resolver      = "3"
autobins      = false

include = [
    "src/**/*",
    "LICENSE-MIT",
    "UNLICENSE",
    "README.md",
    "CHANGELOG.md",
    "resources/luau/vendor/luadate/date.lua",
    "resources/describegpt_defaults.toml",
]

[[bin]]
name              = "qsv"
test              = true
bench             = false
doctest           = false
path              = "src/main.rs"
required-features = ["feature_capable"]

[[bin]]
name              = "qsvmcp"
test              = true
bench             = false
doctest           = false
path              = "src/main.rs"
required-features = ["qsvmcp"]

[[bin]]
name              = "qsvlite"
test              = true
bench             = false
doctest           = false
path              = "src/mainlite.rs"
required-features = ["lite"]

[[bin]]
name              = "qsvdp"
test              = true
bench             = false
doctest           = false
path              = "src/maindp.rs"
required-features = ["datapusher_plus"]

[[test]]
name = "tests"
path = "tests/tests.rs"

[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = 3
strip         = true

[profile.release-samply]
inherits = "release"
debug    = true
strip    = false

[profile.release-nightly]
inherits = "release"
panic    = "abort"

[dependencies]
anstream = { version = "1.0", optional = true }
arboard = { version = "3.6.1", default-features = false, optional = true }
atoi_simd = "0.18"
base62 = { version = "2.2", optional = true }
base64-simd = { version = "0.8", optional = true }
bitvec = "1"
blake3 = { version = "1.8", features = ["rayon", "mmap"] }
bytemuck = { version = "1.24", features = [
    "latest_stable_rust",
], optional = true }
byteorder = "1.5"
bytes = "1"
cached = { version = "0.59", features = [
    "ahash",
    "disk_store",
    "redis_ahash",
] }
calamine = { version = "0.34", features = ["chrono"] }
censor = { version = "0.3", optional = true }
chrono = { version = "0.4.44", default-features = false }
chrono-tz = "0.10"
console = { version = "0.16", optional = true }
const_format = "0.2"
cpc = { version = "3", optional = true }
crc32fast = { version = "1.4", optional = true }
crossbeam-channel = "0.5"
crossterm = { version = "0.29", optional = true }
csv = "1.4"
csv-diff = "0.1"
csv-index = "0.1"
csv-nose = { version = "1.0", default-features = false, features = [
    "runtime-dispatch-simd",
] }
csvlens = { version = "0.15", optional = true, default-features = false, features = [
    "clipboard",
] }
csvs_convert = { version = "0.12", default-features = false, features = [
    "converters",
], optional = true }
dns-lookup = { version = "3", optional = true }
directories = "6.0"
dotenvy = "0.15"
dunce = "1"
dynfmt2 = { version = "0.3", default-features = false, features = ["curly"] }
eudex = { version = "0.1", optional = true }
ext-sort = { version = "0.1", default-features = false }
fast-float2 = "0.2"
flate2 = { version = "1", optional = true }
foldhash = "0.2"
file-format = { version = "0.29", features = ["reader"] }
filetime = "0.2"
flexi_logger = { version = "0.31", features = [
    "async",
    "compress",
    "dont_minimize_extra_stacks",
], default-features = false }
futures = "0.3"
futures-util = "0.3"
gender_guesser = { version = "0.2", optional = true }
geosuggest-core = { version = "0.8", features = ["geoip2"], optional = true }
geosuggest-utils = { version = "0.8", optional = true }
geozero = { version = "0.15", features = [
    "with-csv",
    "with-shp",
], optional = true }
governor = { version = "0.10", optional = true }
grex = { version = "1.4", default-features = false }
gzp = { version = "2", default-features = false, features = ["snappy_default"] }
hostname-validator = "1.1"
human-panic = "2"
iana-time-zone = "0.1"
indexmap = { version = "2.13", features = ["serde"] }
indicatif = "0.18"
itertools = "0.14"
itoa = "1"
jaq-core = "3"
jaq-json = { version = "2", features = ["serde"] }
jaq-std = "3"
json-objects-to-csv = "0.1.3"
jsonschema = { version = "0.46", features = [
    "resolve-file",
    "resolve-http",
    "tls-aws-lc-rs",
], default-features = false }
libc = "0.2"
log = "0.4"
magika = { version = "1.1", optional = true }
memmap2 = "0.9"
mimalloc = { version = "0.1", default-features = false, features = ["extended"], optional = true }
minijinja = { version = "2", features = [
    "json",
    "loop_controls",
    "speedups",
    "stacker",
    "urlencode",
] }
minijinja-contrib = { version = "2", features = [
    "datetime",
    "pycompat",
    "rand",
    "timezone",
    "unicode_wordwrap",
    "wordcount",
    "wordwrap",
] }
mlua = { version = "0.12.0-rc.1", features = [
    "luau",
    "luau-jit",
    "serialize",
], optional = true }
num_cpus = "1"
odht = "0.3"
# ort is needed by magika for ONNX runtime; download-binaries fetches prebuilt binaries
ort = { version = "2.0.0-rc.11", default-features = false, features = ["download-binaries", "tls-rustls"], optional = true }
phf = { version = "0.13", features = ["macros"] }
pragmastat = "12.1"
polars = { version = "0.53", features = [
    "asof_join",
    "avro",
    "avx512",
    # "aws",
    "binary_encoding",
    "bitwise",
    "business",
    # "cloud",
    "coalesce",
    "cross_join",
    "cse",
    "csv",
    "decompress",
    "diagonal_concat",
    "dtype-full",
    "extract_jsonpath",
    "iejoin",
    "ipc",
    "json",
    "lazy",
    "list_eval",
    "new_streaming",
    "object",
    "parquet",
    "performant",
    "pivot",
    "rank",
    "semi_anti_join",
    "serde-lazy",
    "strings",
    "string_normalize",
    "string_pad",
    "sql",
    "timezones",
], optional = true }
pyo3 = { version = "0.28", features = ["auto-initialize"], optional = true }
qsv-dateparser = "0.14"
qsv_docopt = "1.10"
qsv-stats = "0.50"
qsv_currency = "0.7"
qsv-tabwriter = "2"
qsv_vader_sentiment_analysis = { version = "0.2", optional = true }
rand = "0.10"
rand_hc = "0.5"
rand_xoshiro = "0.8"
rayon = "1.12"
redis = { version = "1", features = ["ahash"], default-features = false }
regex = "1"
reqwest = { version = "0.13", features = [
    "blocking",
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls",
    "stream",
    "zstd",
], default-features = false }
rfd = { version = "0.17", optional = true }
rust_decimal = { version = "1.41", default-features = false }
sanitize-filename = { version = "0.6", optional = true }
simd-json = "0.17"
self_update = { version = "0.44", features = [
    "archive-zip",
    "compression-zip-deflate",
    "reqwest",
    "rustls",
    "signatures",
], default-features = false, optional = true }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = { version = "0.7", optional = true }
simdutf8 = "0.1"
toml = "1.1"
toon-format = { version = "0.4", default-features = false }
sled = { version = "0.34", optional = true }
smallvec = "1"
snap = "1"
strsim = { version = "0.11", optional = true }
strum = { version = "0.28", features = ["phf"] }
strum_macros = "0.28"
sysinfo = "0.38"
tempfile = "3.27"
terminal-colorsaurus = { version = "1.0", optional = true }
textwrap = { version = "0.16", features = ["terminal_size"] }
thousands = { version = "0.2", optional = true }
threadpool = "1.8"
tikv-jemallocator = { version = "0.6", optional = true }
titlecase = { version = "3", optional = true }
tokio = { version = "1", features = ["parking_lot", "rt-multi-thread"] }
unicode-width = { version = "0.2", optional = true }
uuid = { version = "1", features = ["v4", "v7"] }
url = "2.5"
whatlang = { version = "0.18", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = "7"
zmij = "1.0"

[dev-dependencies]
actix-governor = "0.10"
actix-web = { version = "4.13", default-features = false, features = [
    "compress-brotli",
    "compress-gzip",
] }
assert-json-diff = "2.0"
newline-converter = "0.3"

# disable these dev dependencies for testing the `to` command
# as they are expensive and slow down the build/CI tests
# postgres = "0.19"
# rusqlite = { version = "0.32", features = ["bundled"] }

quickcheck  = { version = "1", default-features = false }
serial_test = { version = "3.4", features = ["file_locks"] }

[patch.crates-io]
# use our tweaked fork of csv crate
# the csv crate underpins a lot of qsv's functionality, so every perf tweak helps
# the main features of this csv fork is SIMD-accelerated UTF-8 validation;
# non-allocating ByteRecord trim and StringRecord trim;
# a faster `is_non_numeric()` helper;
# replace byte-by-byte loop in csv-core's scan_and_copy with
# memchr-based SIMD scanning and copy_from_slice bulk copy;
# Add the scan_and_copy fast-path to read_field_dfa (previously only in read_record_dfa);
# create single `DfaTransition` struct, reducing lookup by 1 in hot `get_output` path.
# replaced 8-way unrolled table lookup in `needs_quotes` with memchr-based SIMD scanning;
# derive Copy for `Position`, eliminating clone overhead;
# and various clippy lint suggestions applied
csv       = { git = "https://github.com/dathere/rust-csv", branch = "qsv-tuned" }
csv-core  = { git = "https://github.com/dathere/rust-csv", branch = "qsv-tuned" }
csv-index = { git = "https://github.com/dathere/rust-csv", branch = "qsv-tuned" }
# csv = { path = "../rust-csv" }
# csv-core = { path = "../rust-csv/csv-core" }
# csv-index = { path = "../rust-csv/csv-index" }

# use latest upstream of calamine with unreleased fixes and improved performance
calamine = { git = "https://github.com/tafia/calamine", rev = "c040bc9" }

# use our patched fork of csvlens to bump dependencies until our PR is merged
csvlens = { git = "https://github.com/jqnatividad/csvlens", branch = "bump_tui-input_crossterm_n_lock_file" }

# use our patched fork of csvs_convert to bump dependencies until our PR is merged
csvs_convert = { git = "https://github.com/jqnatividad/csvs_convert", branch = "bump-deps-202602", optional = true }

# use our patched fork of json-objects-to-csv to bump deps and to preserve order until our PR is merged
json-objects-to-csv = { git = "https://github.com/jqnatividad/json-objects-to-csv", branch = "preserve_order_issue_10" }

# use latest upstream now that our PR has been merged while awaiting a new release
kiddo = { git = "https://github.com/sdd/kiddo", rev = "2056051"}

# use latest upstream now that our PR has been merged while awaiting a new release 
self_update = { git = "https://github.com/jaemk/self_update", rev = "17af1e9" }

# use our patched fork of sled to get rid of unmaintained instant
sled = { git = "https://github.com/dathere/sled", branch = "v0.34.7-bumped-parking_lot_to_0.12" }

# use our patched fork of whatlang to bump hashbrown until our PR is merged
whatlang = { git = "https://github.com/jqnatividad/whatlang-rs", branch = "bump-hashbrown-to-16" }

# Polars has a much higher release tempo for its Python bindings compared
# to its underlying Rust library. See https://github.com/pola-rs/polars/releases
# It's qsv's policy to use the latest upstream of polars/py-polars
# to take advantage of Polars' latest unreleased fixes and features.
# Based on what's available at the time of qsv's release, we may need to pin polars to a py-polars tag
# or a specific commit if more revisions have been made since the latest polars/py-polars release.
# BUILD NOTE: Be sure to set QSV_POLARS_REV below to the latest commit short hash or tag
# of polars/py-polars before building qsv. This allows us to show the polars rev/tag in --version.
# The convention to use for QSV_POLARS_REV is:
# - if we are using a release version of Rust Polars, leave QSV_POLARS_REV empty
# - if we are using a release version of Python Polars, use the Python tag
#   (e.g. py-1.19.0)
# - if we are using a commit hash, separate the tag and commit hash with a colon, in the order of
#   - Python Polars tag
#   - short commit hash
#     (e.g. py-1.19.0:52ea381 to indicate that we are Python Polars 1.19.0,
#      and the commit hash 52ea381)
# ================================
# QSV_POLARS_REV=py-1.40.1
polars = { git = "https://github.com/pola-rs/polars", tag = "py-1.40.1", optional = true }
# polars = { git = "https://github.com/pola-rs/polars", rev = "c6e189c", optional = true }

[features]
default = ["jemallocator"]
distrib_features = [
    "feature_capable",
    "apply",
    "fetch",
    "foreach",
    "geocode",
    "luau",
    "mcp",
    "polars",
    "python",
    "to",
]
all_features = ["distrib_features", "magika", "self_update", "ui"]
qsvmcp = ["feature_capable", "geocode", "luau", "mcp", "polars", "self_update", "to"]
apply = [
    "base62",
    "base64-simd",
    "censor",
    "cpc",
    "crc32fast",
    "eudex",
    "gender_guesser",
    "qsv_vader_sentiment_analysis",
    "strsim",
    "thousands",
    "titlecase",
    "whatlang",
]
clipboard = ["arboard"]
color = ["anstream", "crossterm", "terminal-colorsaurus", "unicode-width"]
fetch = [
    "console",
    "flate2",
    "governor",
    "serde_urlencoded",
    "sled",
]
foreach = []
geocode = [
    "bytemuck",
    "dns-lookup",
    "geosuggest-core",
    "geosuggest-utils",
    "geozero",
    "sled",
]
luau = ["mlua", "sanitize-filename"]
magika = ["dep:magika", "dep:ort"]
mcp = []
polars = ["dep:polars", "bytemuck"]

prompt = ["rfd"]
python = ["pyo3"]
to = ["csvs_convert"]
lens = ["csvlens"]
lite = []
datapusher_plus = ["geocode", "self_update"]
ui = ["clipboard", "color", "prompt", "lens"]
jemallocator = ["tikv-jemallocator"]
feature_capable = []
nightly = [
    "crc32fast/nightly",
    "pyo3/nightly",
    "rand/simd_support",
    "simd-json/hints",
    "foldhash/nightly",
]

nightly-polars =[
    "polars/nightly",
    "polars/simd",
]

[package.metadata.deb]
maintainer           = "Konstantin Sivakov <konstantin@datHere.com>"
copyright            = "2024, datHere Inc. <www.dathere.com>"
extended-description = """A high performance CSV data-wrangling toolkit."""
depends              = "$auto"
section              = "utility"
priority             = "optional"

# Default feature and asset
features = ["feature_capable"]
assets   = [["target/release/qsv", "/usr/local/bin/", "755"]]

# Conditional features and assets
[package.metadata.deb.variants.lite]
features = ["lite"]
assets   = [["target/release/qsvlite", "/usr/local/bin/", "755"]]

[package.metadata.deb.variants.datapusher_plus]
features = ["datapusher_plus", "luau"]
assets   = [["target/release/qsvdp", "/usr/local/bin/", "755"]]
